# activity_suggestion

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: main.yml  makefile.yml  run_tests.yml  test_and_deploy.yml
activity_suggestions/: activities.py  app.py  city.py
react_frontend/: package-lock.json  package.json
react_frontend/src/: App.js
react_frontend/src/components/: Activities.js  CityLable.js  CityResult.js  PopulatedList.js
tests/: test_activities.py  test_activity_suggestions.py  test_app.py  test_city.py
