[tool.poetry]
name = "activity_suggestions"
version = "0.1.0"
description = ""
authors = ["Marcelo Ferraz de Oliveira <mfogoiania@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
gunicorn = "^20.1.0"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
